# Amharic-E-commerce-Data-Extractor

./: .env.example  .flake8  .gitignore  Amharic-E-commerce-Data-Extractor.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_ENV.md  dashboard.py  docker-compose.yml  main_pipeline.py  pyproject.toml  requirements.txt  run_dashboard.py  run_demo.bat  run_demo.sh  setup.py  setup_env.py  test_system.py
.github/workflows/: ci.yaml  ci.yml
Performance_of_models/: Bert-tiny.json  DistilBert.json  XLM-Roberta.json
config/: __init__.py  config.py  settings.py
models/simple_ner_fixed/: labels.pkl  model.pkl  vectorizer.pkl
notebooks/: 00_setup_and_overview.ipynb  01_data_ingestion.ipynb  02_conll_labeling.ipynb  03_model_training.ipynb  04_model_evaluation.ipynb  05_interpretability.ipynb  06_vendor_analytics.ipynb  2_Data_Labeling.ipynb  Automated_Data_Collection.ipynb  Data_Collection.ipynb  Fine_Tune_NER_Model .ipynb  Fine_tune_Bert_model.ipynb  Fine_tune_distilbert.ipynb  Fine_tune_xlm_roberta.ipynb  Model_Comparison.ipynb  Model_Interpretation.ipynb  Performance_Benchmarking.ipynb  Preprocessing.ipynb  Task1_Data_Ingestion_Preprocessing.ipynb  Task2_CoNLL_Labeling.ipynb  Task3_NER_Model_Training.ipynb  Task4_Model_Comparison.ipynb  Task5_Model_Interpretability.ipynb  Task6_Vendor_Analytics.ipynb  Task_4_Model_Comparison.ipynb  Task_5_model_explainability.ipynb  session.session  task_6_vendor_scorecard.ipynb  telegram_scrape_and_preprocess.ipynb  vendor_scorecard_Engine.ipynb
scripts/: Plotting.py  Utils.py  demo.py  main_pipeline.py  quick_start.py  run_individual_tasks.py  task_1_ingest.py  task_2_label.py  task_3_finetune.py  task_4_compare.py  task_5_interpret.py  task_6_vendor_scorecard.py  telegram_scrapper.py  tunning.py  vendor_scorecard.py
src/: __init__.py
src/amharic_text_processing/: amharic_text.py
src/analytics/: __init__.py  vendor_scorecard.py
src/config/: __init__.py  env_config.py
src/dashboard/: __init__.py  streamlit_app.py
src/data_collection/: __init__.py  automated_scraper.py  telegram_scraper.py
src/data_ingestion/: __init__.py  demo_scraper.py  telegram_scraper.py
src/evaluation/: __init__.py  model_comparator.py  model_evaluator.py
src/ingestion/: telegram_scraper.py
src/interpretability/: __init__.py  explain.py  model_explainer.py
src/labeling/: conll_formatter.py  conll_labeler.py
src/models/: __init__.py  trainer.py
src/ner/: __init__.py  dataset.py  model_trainer.py  ner_pipeline.py  train.py
src/preprocessing/: __init__.py  amharic_text.py  conll_labeler.py  text_cleaner.py  text_preprocessor.py  text_processor.py  tokenizer.py
src/telegram_data_ingestion/: telegram_scraper.py
src/training/: ner_trainer.py
src/utils/: __init__.py  entity_labeler.py  etnltk_helper.py
src/vendor_analytics/: __init__.py  scorecard.py  vendor_scorer.py
src/visualization/: __init__.py  model_plots.py
tests/: test_basic.py  test_core_functions.py  test_dashboard.py  test_interpretability.py  test_models.py  test_training.py
tests/integration/: test_pipeline.py
tests/unit/: test_conll_labeler.py  test_preprocessor.py  test_vendor_scorecard.py
