[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amharic-ecommerce-extractor"
version = "1.0.0"
description = "Amharic E-commerce Data Extractor & NER Fine-Tuning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "wondebdu@gmail.com"}
]
keywords = ["amharic", "nlp", "ner", "telegram", "ecommerce", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/wondifraw/Amharic-E-commerce-Data-Extractor"
Repository = "https://github.com/wondifraw/Amharic-E-commerce-Data-Extractor"
Issues = "https://github.com/wondifraw/Amharic-E-commerce-Data-Extractor/issues"

[project.scripts]
amharic-scraper = "src.data_collection.telegram_scraper:main"
amharic-trainer = "src.models.trainer:main"
amharic-scorecard = "src.analytics.vendor_scorecard:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88